# Market-Research

./: .env.example  .gitignore  README.md  app.py  cli.py  market_research.ipynb  market_research.py  place_details.ipynb  pyproject.toml  requirements.txt
notebooks/: example_usage.ipynb
src/: __init__.py  colorado_sos.py  config.py  data_utils.py  email_extractor.py  mapping.py  places.py
styles/: main.css
tests/: __init__.py  test_places.py
